--- a/web/views/chat.ejs
+++ b/web/views/chat.ejs
@@ -84,6 +84,9 @@
 					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="/newsfeed">News Feed<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/profile">My Profile<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
