--- a/web/views/newsFeed.ejs
+++ b/web/views/newsFeed.ejs
@@ -5,7 +5,10 @@
 	<!-- CSS only -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
+	<link rel="stylesheet" href="/css/search.css">
+	<script src="/js/search.js"></script>
 </head>
+
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/homepage">PennBook</a>
@@ -14,14 +17,14 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item ">
 					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/newsfeed">News Feed<span class="sr-only">(current)</span></a>
+					<a class="nav-link active" href="/newsfeed">News Feed<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/profile">My Profile<span class="sr-only">(current)</span></a>
@@ -38,20 +41,12 @@
 	</nav>
 	<div class="container">
 		<h1>
-			Search results
+            News feed page
 		</h1>
-		<table class="table">
-			<tbody>
-				<% for (user of users) {%>
-				<tr>
-					<td>
-						<a href='/profile/<%=user.login.S%>''><%= user.fullname.S %> (<%= user.login.S %>)</a>
-					</td>
-				</tr>
-				<% } %>
-			</tbody>
-		</table>
 	</div>
     
 </body>
+<script>
+	autocomplete(document.getElementById("user-search"));
+</script>
 </html>
