--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -324,6 +324,9 @@
 				<li class="nav-item ">
 					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/newsfeed">News Feed<span class="sr-only">(current)</span></a>
+				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="/profile">My Profile<span class="sr-only">(current)</span></a>
 				</li>
