--- a/web/views/newsFeed.ejs
+++ b/web/views/newsFeed.ejs
@@ -4,6 +4,11 @@
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
 	<!-- CSS only -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 	<link rel="stylesheet" href="/css/search.css">
 	<script src="/js/search.js"></script>
@@ -56,6 +61,11 @@
         <br>
         <div class="card">
             <h5 class="card-header">
+                <span>
+                    <button id="like-button-<%=article.article_id.S%>" class="btn">
+                        <i id='friend_icon-<%=article.article_id.S%>' class="bi bi-heart"></i>
+                    </button>
+                </span>
                 <a href="<%=article.link.S%>"><%=article.headline.S%></a>
                 <span class="badge badge-info"><%=article.category.S%></span>
             </h5>
